@startuml
skinparam classAttributeIconSize 0

package "Presentation" #DDDDDD {
class SaveDraftUI{

}
}


package "Application" #DDDDDD {
class SaveDraftController{
+create()
+getServiceDraftById(id)
+getCatalogues()
+saveService(serviceDraft)
}
}


package "Domain" #DDDDDD {
class Service{
+create(title, briefDescription, completeDescription, \nfeedback, keywordList, formList)
}

class ServiceDraft{
+getTitle()
+getBriefDescription()
+getCompleteDescription()
+getFeedback()
+getKeywordList()
+getFormList()
}

class Form{
}

class Catalogue{
}

class Title{
+createTitle(title)
-validate(title)
}

class BriefDescription{
+createBriefDescription(briefDescription)
-validate(briefDescription)
}

class CompleteDescription{
+createDescricaoCompleta(completeDescription)
-validate(completeDescription)
}

class Keyword{
+createKeyword(keyword)
-validate(keyword)
}

class Feedback{
+createFeedback(feedback)
-validate(feedback)
}



package Builder #DDDDDD {
class ServiceBuilder{
+create()
+withTitle(title)
+withBriefDescription(briefDescription)
+withCompleteDescription(completeDescription)
+withFeedback(feedback)
+withKeywordList(keywordList)
+withFormList(formList)
+build()
}

}

}

package Persistence #DDDDDD {
class PersistenceContext{
+repositories()
}

class AppSettings{
+instance()
+getRepositoryFactory()
}

package Factory #DDDDDD {
class RepositoryFactory{
+create()
+servicos()
+catalogos()
+formularios()
}
}

package "Repository" #DDDDDD {
class ServiceRepository{
+create()
+save(service)
}

class ServiceDraftRepository{
+create()
+getServiceDraftById(id)
}

class CatalogueRepository{
+create()
+all()
}

interface ServiceRepositoryInterface{

}

interface ServiceDraftRepositoryInterface{

}

interface CatalogueRepositoryInterface{

}
}



SaveDraftUI ..> SaveDraftController
SaveDraftController ..> ServicoBuilder
SaveDraftController ..> PersistenceContext

ServiceRepository ..> ServiceRepositoryInterface
ServiceDraftRepository ..> ServiceDraftRepositoryInterface
CatalogueRepository ..> CatalogueRepositoryInterface

AppSettings -> RepositoryFactory : creates
PersistenceContext -> AppSettings : implements

RepositoryFactory "1" -> "1" ServiceRepository : has
RepositoryFactory "1" -> "1" CatalogueRepository : has
RepositoryFactory "1" -> "1" ServiceDraftRepository : has

ServiceRepository "1" -> "*" Service : saves
ServiceBuilder "1" -> "*" Service : cria
ServiceDraftRepository "1" -> "*" ServiceDraft : saves
CatalogueRepository "1" -> "*" Catalogue : saves

Service "1" -> "1" Title : has
Service "1" -> "1" BriefDescription : has
Service "1" -> "1" CompleteDescription : has
Service "1" -> "*" Keyword : has
Service "1" -> "0..1" Feedback : has
Service "1" -> "*" Form : has
Service "1" -> "1" Catalogue : is available in


@enduml